--- a/Game3Question/Resources/layout/Questionlayout.axml
+++ b/Game3Question/Resources/layout/Questionlayout.axml
@@ -31,33 +31,10 @@
         p1:layout_gravity="center"
         p1:gravity="center">
         <Button
-            p1:text="اشتباه"
-            p1:id="@+id/btnWrong"
-            p1:layout_width="123.5dp"
-            p1:layout_height="92.0dp"
-            p1:layout_marginRight="0.0dp"
-            p1:visibility="visible"
-            p1:background="@android:color/holo_red_dark"
-            p1:textSize="20dp"
-            p1:textStyle="bold" />
-        <Button
-            p1:text="سوال"
+            p1:text="PUSH"
             p1:id="@+id/btnPush"
             p1:layout_width="123.5dp"
             p1:layout_height="92.0dp"
-            p1:layout_marginRight="0.0dp"
-            p1:textStyle="bold"
-            p1:textSize="25dp"
-            p1:background="@android:color/holo_blue_dark" />
-        <Button
-            p1:text="صحیح"
-            p1:id="@+id/btnCorrect"
-            p1:layout_width="123.5dp"
-            p1:layout_height="92.0dp"
-            p1:layout_marginRight="0.0dp"
-            p1:visibility="visible"
-            p1:background="@android:color/holo_green_dark"
-            p1:textSize="20dp"
-            p1:textStyle="bold" />
+            p1:layout_marginRight="0.0dp" />
     </LinearLayout>
 </LinearLayout>
