--- a/Game3Question/Resources/layout/Questionlayout.axml
+++ b/Game3Question/Resources/layout/Questionlayout.axml
@@ -12,15 +12,23 @@
         p1:layout_width="match_parent"
         p1:layout_height="52.0dp"
         p1:id="@+id/txtPersonName"
-        p1:gravity="center" />
+        p1:gravity="center"
+        p1:layout_marginLeft="20dp"
+        p1:layout_marginRight="20dp"
+        p1:layout_marginTop="10dp"
+        p1:textStyle="bold"
+        p1:textSize="20dp" />
     <TextView
         p1:text="Large Text"
         p1:textAppearance="?android:attr/textAppearanceLarge"
         p1:layout_width="match_parent"
         p1:layout_height="318.5dp"
         p1:id="@+id/txtQuestion"
-        p1:layout_marginBottom="40.5dp"
-        p1:gravity="center_vertical|center" />
+        p1:gravity="center_vertical|center"
+        p1:layout_marginLeft="20dp"
+        p1:layout_marginRight="20dp"
+        p1:layout_marginTop="10dp"
+        p1:layout_marginBottom="10dp" />
     <LinearLayout
         p1:orientation="horizontal"
         p1:minWidth="25px"
